--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,115 +27,130 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-LOGIN DIV
-<center>
-<div id="login">
-<table border="1">
-    <form name="login" method="post" action="login">
-	<tr>
-		<td width="100"><label><h4>User Name:</h4></td>
-		<td><input type="text" id="username" name="username" placeholder="Enter your name here" required title="You can enter characters as well as numbers.">
-		</label></td>
-	</tr>
+	LOGIN DIV
+	<center>
+		<div id="login">
+			<table border="1">
+				<form name="login" method="post" action="login">
+					<tr>
+						<td width="100"><label><h4>User Name:</h4></td>
+						<td><input type="text" id="username" name="username"
+							placeholder="Enter your name here" required
+							title="You can enter characters as well as numbers."> </label></td>
+					</tr>
 
-	<tr>
-		<td><label><h4>Password:</h4></td><td><input type="password" id="password" name="pass" placeholder="Enter your password here" required title="Your password should be atleast 6 characters long.">
-		</label>
-		</td>
-	</tr>
-	
-	<tr>
-		<td><label><h4>Specify Role:</h4></td><td><select id="select" name="role" placeholder="Select role from here" required title="Do specify your role">
-			<option value="professors">PProfessor</option>
-			<option value="students">SStudents</option>
-			<option value="ta">TA</option>
-		</select>
-		</label>
-		</td>
-	</tr>
+					<tr>
+						<td><label><h4>Password:</h4></td>
+						<td><input type="password" id="password" name="pass"
+							placeholder="Enter your password here" required
+							title="Your password should be atleast 6 characters long.">
+							</label></td>
+					</tr>
 
-	<tr>
-		<td align="center" colspan="2"><label><input type="submit" id="submit" name="submit" value="LOGIN" required></label></td>
-	</tr>
+					<tr>
+						<td><label><h4>Specify Role:</h4></td>
+						<td><select id="select" name="role"
+							placeholder="Select role from here" required
+							title="Do specify your role">
+								<option value="professors">PProfessor</option>
+								<option value="students">SStudents</option>
+								<option value="ta">TA</option>
+						</select> </label></td>
+					</tr>
 
-	<tr>
-	<td colspan="2"><center><h4><a href="newhome.html">Go back to Home</a></center></h4>
-	</tr>
-    </form>
-</table>	
-</div>	
-----------------------------------------------------
-New User DIV
-<div id="create">
-<table border="1">
-    <form name="newUser" method="get" action="Home">
-	<tr>
-		<td><label><h4>First Name:</h4></td>
-		<td><input type="text" id="fname" name="fname" placeholder="" required title="You can enter characters.">
-		</label></td>
-	</tr>
-	<tr>
-		<td><label><h4>Last Name:</h4></td>
-		<td><input type="text" id="lname" name="lname" placeholder="" required title="You can enter characters.">
-		</label></td>
-	</tr>
-	
-	<tr>
-		<td><label><h4>Specify Role:</h4></td><td><select id="RoleSelect" name="role" placeholder="Select role from here" required title="Do specify your role">
-			<option value="professors">Professor</option>
-			<option value="students">Student</option>
-			<option value="ta">TA</option>
-		</select>
-		</label>
-		</td>
-	</tr>
-	
-	<tr>
-		<td><label><h4>Study Level:</h4></td><td><select id="LevelSelect" name="lev" placeholder="Select level from here" required title="Do specify your level">
-			<option value="graduate">Graduate</option>
-			<option value="undergraduate">Under-Graduate</option>
-		</select>
-		</label>
-		</td>
-	</tr>
-	
-	<tr>
-		<td><label><h4>Course:</h4></td><td><select id="CourseSelect" name="course" placeholder="Select course from here" required title="Do specify your course">
-			<option value="CSC541">CSC541</option>
-			<option value="CSC540">CSC540</option>
-			<option value="CSC440">CSC440</option>
-		</select>
-		</label>
-		</td>
-	</tr>
-	
-	
-	<tr>
-		<td width="100"><label><h4>User Name:</h4></td>
-		<td><input type="text" id="username" name="username" placeholder="Enter your name here" required title="You can enter characters as well as numbers.">
-		</label></td>
-	</tr>
+					<tr>
+						<td align="center" colspan="2"><label><input
+								type="submit" id="submit" name="submit" value="LOGIN" required></label></td>
+					</tr>
 
-	<tr>
-		<td><label><h4>Password:</h4></td><td><input type="password" id="password" name="pass" placeholder="Enter your password here" required title="Your password should be atleast 6 characters long.">
-		</label>
-		</td>
-	</tr>
-	
-	
+					<tr>
+						<td colspan="2"><center>
+								<h4>
+									<a href="newhome.html">Go back to Home</a>
+							</center>
+							</h4>
+					</tr>
+				</form>
+			</table>
+		</div>
+		---------------------------------------------------- New User DIV
+		<div id="create">
+			<table border="1">
+				<form name="newUser" method="get" action="Home">
+					<tr>
+						<td><label><h4>First Name:</h4></td>
+						<td><input type="text" id="fname" name="fname" placeholder=""
+							required title="You can enter characters."> </label></td>
+					</tr>
+					<tr>
+						<td><label><h4>Last Name:</h4></td>
+						<td><input type="text" id="lname" name="lname" placeholder=""
+							required title="You can enter characters."> </label></td>
+					</tr>
 
-	<tr>
-		<td align="center" colspan="2"><label><input type="submit" id="submit" name="submit" value="REGISTER" required></label></td>
-	</tr>
+					<tr>
+						<td><label><h4>Specify Role:</h4></td>
+						<td><select id="RoleSelect" name="role"
+							placeholder="Select role from here" required
+							title="Do specify your role">
+								<option value="professors">Professor</option>
+								<option value="students">Student</option>
+								<option value="ta">TA</option>
+						</select> </label></td>
+					</tr>
+
+					<tr>
+						<td><label><h4>Study Level:</h4></td>
+						<td><select id="LevelSelect" name="lev"
+							placeholder="Select level from here" required
+							title="Do specify your level">
+								<option value="graduate">Graduate</option>
+								<option value="undergraduate">Under-Graduate</option>
+						</select> </label></td>
+					</tr>
+
+					<tr>
+						<td><label><h4>Course:</h4></td>
+						<td><select id="CourseSelect" name="course"
+							placeholder="Select course from here" required
+							title="Do specify your course">
+								<option value="CSC541">CSC541</option>
+								<option value="CSC540">CSC540</option>
+								<option value="CSC440">CSC440</option>
+						</select> </label></td>
+					</tr>
 
 
-    </form>
-</table>	
+					<tr>
+						<td width="100"><label><h4>User Name:</h4></td>
+						<td><input type="text" id="username" name="username"
+							placeholder="Enter your name here" required
+							title="You can enter characters as well as numbers."> </label></td>
+					</tr>
 
-</div>
----------------------
-Exit
-</center>	
+					<tr>
+						<td><label><h4>Password:</h4></td>
+						<td><input type="password" id="password" name="pass"
+							placeholder="Enter your password here" required
+							title="Your password should be atleast 6 characters long.">
+							</label></td>
+					</tr>
+
+
+
+					<tr>
+						<td align="center" colspan="2"><label><input
+								type="submit" id="submit" name="submit" value="REGISTER"
+								required></label></td>
+					</tr>
+
+
+				</form>
+			</table>
+
+		</div>
+		--------------------- Exit
+	</center>
 
 
 </body>
